# bots-python

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pylintrc  renovate.json
.github/workflows/: outdated.yml  weather.yml
bots/: weather.py
bots/vector/: README.md  pyproject.toml
bots/vector/src/: transform.py
bots/vector/src/sql/: supabase.sql
